Fix alignment.

--- a/resources/style.css
+++ b/resources/style.css
@@ -75,6 +75,7 @@ a{
   margin: auto;
   background-color: black;
   width: 100%;
+  vertical-align: middle;
 
 }
 
@@ -126,12 +127,7 @@ p{
   display: block;
   text-align: center;
   margin: 11px;
-  padding-right: 5px;
-  padding-left: 5px;
-}
-
-.short{
-  display: block;
+  padding: 0 5px;
 }
 
 .bottom{
